--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -127,7 +127,7 @@
 <body class="bg-brand-beige flex flex-col min-h-screen">
     <a href="#main" class="skip-to-content btn-base bg-brand-wood text-white absolute -top-96 focus:top-4 focus:left-4 z-50">Skip to main content</a>
 
-    {% include "header.html" %}
+    {% include "header.njk" %}
 
     {% if banner %}
     <section id="page-banner" class="page-banner page-banner--hero relative min-h-[420px] flex items-center" role="banner" aria-label="Page banner">
