--- a/src/_includes/components/responsive-image.njk
+++ b/src/_includes/components/responsive-image.njk
@@ -30,7 +30,7 @@
   <source media="(min-width: 640px)" srcset="/public/images/{{ imageDir }}/{{ imageBase }}-640.webp" type="image/webp">
 
   {# JPEG fallback #}
-  <img src="/public/images/{{ imageDir }}/{{ src }}"
+  <img src="/images/{{ imageDir }}/{{ src }}"
        alt="{{ alt }}"
        class="w-full h-full object-cover"
        loading="{{ loading }}"
