--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -4,7 +4,7 @@
 
         <div class="flex items-center gap-4">
             <a href="/" class="flex items-center gap-3 group focus:outline-none focus:ring-2 focus:ring-brand-wood rounded-lg" aria-label="Properties 4 Creations Home">
-                <img src="/public/images/logo/BRAND_LOGO.svg" alt="" class="h-10 w-auto group-hover:scale-105 transition-transform">
+                <img src="/images/logo/BRAND_LOGO.svg" alt="" class="h-10 w-auto group-hover:scale-105 transition-transform">
                 <span class="font-heading font-bold text-white text-lg tracking-tight hidden md:block">Properties<span class="text-brand-wood">4</span>Creations</span>
             </a>
         </div>
